package edu.hitsz.factory;

import edu.hitsz.aircraft.AbstractAircraft;

public abstract class PlaneFactory {
    public abstract AbstractAircraft createAircraft();
}
