@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + FlyingObject(int locationX, int locationY, int speedX, int speedY):void
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# axHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<Bullet>
 }

abstract class AbstractBullet
{
    - power:int
    + Bullet(int locationX, int locationY, int speedX, int speedY, int power):void
    + forward():void
	+ getPower():int
}

abstract class AbstractProp{
    +Prop(int locationX, int locationY, int speedX, int speedY):void
    +func():void
    +forward():void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- AbstractBullet
AbstractFlyingObject <|-- AbstractProp


AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

AbstractBullet <|-- HeroBullet
AbstractBullet <|-- EnemyBullet

AbstractProp <|--BloodProp
AbstractProp <|--BombProp
AbstractProp <|--BulletProp

abstract class PlaneFactory


class MobEnemyFactory
class EliteEnemyFactory
class BossEnemyFactory
PlaneFactory <|-- MobEnemyFactory
PlaneFactory <|-- EliteEnemyFactory
PlaneFactory <|-- BossEnemyFactory

class PropFactory
class BloodPropFactory
class BombPropFactory
class BulletPropFactory

PropFactory <|-- BloodPropFactory
PropFactory <|-- BombPropFactory
PropFactory <|-- BulletPropFactory

BloodPropFactory ..> BloodProp : create
BombPropFactory ..> BombProp : create
BulletPropFactory ..> BulletProp : create

AbstractAircraft <.. PlaneFactory

MobEnemy <.. MobEnemyFactory : create
EliteEnemy <.. EliteEnemyFactory : create
Bossenemy <.. BossEnemyFactory : create

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class EliteEnemy{
    +EliteEnemy(int locationX, int locationY, int speedX, int speedY,int hp):void
    +forward():void
    +shoot():List<Bullet>
}

class BossEnemy{
    +BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    +forward():void
    +shoot():List<Bullet>
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
}

class BloodProp{
    +BloodProp(int locationX, int locationY, int speedX, int speedY):void
    +func(int hp):void
    +forward():void
}

class BombProp{
    +BombProp(int locationX, int locationY, int speedX, int speedY):void
    +func():void
    +forward():void
}

class BulletProp{
    +BulletProp(int locationX, int locationY, int speedX, int speedY):void
    +func():void
    +forward():void
}

class PlaneFactory{
    +createAircraft():AbstractAircraft
}

class MobEnemyFactory{
    +createAircraft():AbstractAircraft
}
class EliteEnemyFactory{
    +createAircraft():AbstractAircraft
}
class BossEnemyFactory{
    +createAircraft():AbstractAircraft
}

class PropFactory{
    +createAbstractProp():AbstractProp
}

class BloodPropFactory{
    +createAbstractProp():AbstractProp
}
class BombPropFactory{
    +createAbstractProp():AbstractProp
}
class BulletPropFactory{
    +createAbstractProp():AbstractProp
}
@enduml